Fix #104534: Image editor doesn't refresh after render.render.

When render is triggered from python and the render result is displayed
it isn't being updated as it wasn't tagged as being invalid.

Pull Request #105480